# Franchisa

./: .gitignore  GAS_BENCHMARKS.md  PROOF_SPEC.md  README.md
.github/workflows/: deploy-stylus.yml
agent/: .env.example  .gitignore  agent.py  edgar.py  parser.py  proof_export.py  register_demo_meetings.py  requirements.txt  submitter.py  watchlist.json
contracts/solidity/: foundry.toml
contracts/solidity/script/: Deploy.s.sol  DeployMultiToken.s.sol  DeployRobinhood.s.sol
contracts/solidity/src/: FranchisaGovernanceRegistry.sol  MockStylusEngine.sol  MockTokenizedStock.sol
contracts/solidity/test/: FranchisaGovernanceRegistry.t.sol  MockStylusEngineAuth.t.sol
contracts/stylus/: Cargo.toml  Stylus.toml  rust-toolchain.toml
contracts/stylus/src/: lib.rs  main.rs
design-system/franchisa/: MASTER.md
frontend/: package-lock.json  package.json
frontend/public/: franchisa_proof_NVDA.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/faucet/: page.tsx
frontend/src/components/: architecture-section.tsx  connect-wallet-button.tsx  footer.tsx  hero.tsx  meeting-card.tsx  navbar.tsx  proposal-card.tsx  stats-bar.tsx  theme-toggle.tsx  web3-provider.tsx
frontend/src/components/ui/: footer-taped-design.tsx  glassmorphism-trust-hero.tsx  liquid-glass-button.tsx  shader-background.tsx  starfield.tsx  tubelight-navbar.tsx
frontend/src/hooks/: use-governance.ts  use-meetings.ts
frontend/src/lib/: contracts.ts  mock-data.ts  wagmi.ts
(+3 files in other folders)
