[package]
name = "franchisa-proxy-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "franchisa-proxy-oracle"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = "0.6.0"
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
ruint = "=1.12.3"

[dev-dependencies]
motsu = "0.2"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
